# RinhaAPI

./: .gitignore  CNAME  README.md  index.html  pyproject.toml  requirements.txt
assets/: index-11480c8c.js  index-302f5b71.js  index-35871d11.css  index-c4af077b.js  index-d814311e.css
rinhaapi/: api.py  app.py  card_template_generator.py  match_parser.py  matches.sqlite  performances.py  requirements.txt  rinha.sqlite  stratz.json
rinhafront/: index.html  package-lock.json  package.json  vite.config.js
rinhafront/src/: App.css  App.jsx
rinhafront/src/assets/cards/: index.js
static_app/: Cartas de Jogadores RDC.htm
static_app/Cartas de Jogadores RDC_files/: client  main.jsx
tests/: player.csv  test_match_parser.py  test_performances.py
