[tool.poetry]
name = "rinhaapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
numpy = "^1.24.3"
requests = "^2.31.0"
webdriver-manager = "^3.8.6"
flask-cors = "^3.0.10"
pandas = "^2.0.3"
psycopg2-binary = "^2.9.6"
pytest = "^7.4.0"

[tool.poetry.scripts]
match_parser = "rinhaapi.match_parser:update"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
